--- a/api/package.json
+++ b/api/package.json
@@ -10,9 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "github:types/express",
-    "express": "^4.18.2",
-    "express-openapi": "^12.1.3",
+    "express": "~4.17.3",
+    "express-openapi": "~7.0.1",
     "ts-node": "^10.9.1"
   }
 }
