--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "redux-saga": "^1.2.3"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/redux-logger": "^3.0.12",
