--- a/app/.gitignore
+++ b/app/.gitignore
@@ -7,7 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+node_modules/*
+/api/node_modules/
+/api/.DS_Store
+.DS_Store
+/api/src/.DS_Store
 dist
 dist-ssr
 *.local
