--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^5.5.1",
+    "@capacitor/browser": "^5.1.0",
     "@capacitor/core": "^5.5.1",
     "@capacitor/ios": "^5.5.1",
     "leaflet": "^1.9.4",
