--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.21.0",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.3"
