--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,9 @@
     "@capacitor/core": "^5.6.0",
     "@capacitor/ios": "^5.5.1",
     "@types/react-router-dom": "^5.3.3",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.4",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
