Added button on the frontend to "sync" sightings to the database

--- a/app/package.json
+++ b/app/package.json
@@ -14,10 +14,11 @@
     "@capacitor/browser": "^5.1.0",
     "@capacitor/core": "^5.6.0",
     "@capacitor/ios": "^5.5.1",
-    "@types/react-router-dom": "^5.3.3",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.4",
+    "@types/react-router-dom": "^5.3.3",
+    "cors": "^2.8.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
