--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/sqlite3": "^3.1.11",
+    "cors": "^2.8.5",
     "express": "~4.17.3",
     "express-openapi": "~7.0.1",
     "sqlite": "^3.0.6",
