resolve some snags from last few merges

--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,7 @@
     "cors": "^2.8.5",
     "express": "~4.17.3",
     "express-openapi": "~7.0.1",
-    "sqlite": "^3.0.6",
+    "sqlite3": "^5.1.7",
     "ts-node": "^10.9.1"
   }
 }
