--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,36 +1,25 @@
-// {
-//   "compilerOptions": {
-//     "esModuleInterop": true,
-//     "target": "es5",
-//     "module": "commonjs"
-//   },
-// }
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "lib": ["es2020.string", "dom", "es2015"],
-    "rootDir": ".",
-    "baseUrl": "src",
-    "outDir": "dist",
-    "downlevelIteration": true,
-    "target": "es5",
-    "sourceMap": true,
-    "allowJs": false,
-    "moduleResolution": "node",
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitThis": true,
-    "noImplicitAny": false,
-    "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true,
-    "noUnusedLocals": false,
-    "esModuleInterop": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
     "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
-    "strict": false,
-    "typeRoots": ["node_modules/@types"]
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
-  "exclude": ["**/node_modules", "**/dist"]
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
