--- a/compose.yaml
+++ b/compose.yaml
@@ -5,3 +5,9 @@ services:
       dockerfile: ./Dockerfile
     ports: 
       - "4173:4173"
+  api:
+    build:
+      context: api
+      dockerfile: ./Dockerfile
+    ports: 
+      - "7080:7080"
